public static class AnimParamsPlayer {
    public static string jump = "jump trigger";
    public static string run = "is running";
    public static string grounded = "is grounded";
    public static string onWall = "is touching wall";
    public static string attack = "attack";
    public static string die = "die";
    public static string respawn = "Respawn";
    public static string hurt = "hurt";
}